# BigBaseV2-fix

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  premake5.lua
.github/workflows/: ci.yml
BigBaseV2/src/: common.hpp  crossmap.hpp  detour_hook.cpp  detour_hook.hpp  fonts.cpp  hooking.cpp  main.cpp  pointers.cpp  pointers.hpp  renderer.cpp  script.hpp
BigBaseV2/src/ASI Loader/: ASILoader.cpp  Pools.cpp  Pools.h  ScriptManager.h
BigBaseV2/src/gta/: PickupRewards.h  Vehicles.h  Weapons.h  natives.hpp  net_object_mgr.hpp  player.hpp
BigBaseV2/src/gui/: base_tab.cpp
cmake/: async-logger.cmake  build_options.cmake  build_options_impl.cmake  crosscompile.cmake  fmt.cmake  g3log.cmake  gtav-classes.cmake  imgui.cmake  json.cmake  minhook.cmake
src/: benchmark.h  byte_patch_manager.cpp  byte_patch_manager.hpp  common.hpp  config.cpp  config.cpp.in  config.hpp  crossmap.hpp  detour_hook.cpp  features.cpp  fiber_pool.cpp  fiber_pool.hpp  file_manager.cpp  file_manager.hpp  function_types.hpp  gta_util.hpp  gui.cpp  gui.hpp  hooking.cpp  hooking.hpp  invoker.cpp  invoker.hpp  invoker_asm.asm  logger.hpp  main.cpp  natives.hpp  pointers.cpp  pointers.hpp  renderer.cpp  renderer.hpp  script.cpp  script.hpp  script_global.cpp  script_hook.cpp  script_hook.hpp  script_mgr.cpp  script_mgr.hpp  settings.h  shv_runner.cpp  thread_pool.cpp  (+1 more)
src/asi_loader/: asi_scripts.cpp  pe_image.cpp  pe_image.hpp  pools.cpp  script_manager.cpp  script_manager.hpp
src/backend/: backend.cpp  backend.hpp  script_patches.hpp
src/backend/looped/: looped.hpp
src/backend/looped/system/: self_globals.cpp
src/core/: globals.hpp  settings.hpp
src/core/data/: stack_sizes.hpp
src/file_manager/: folder.cpp
src/gta/: VehicleValues.h  Vehicles.h  Weapons.h  array.hpp  base.hpp  blip.hpp  decal_controller.hpp  enums.hpp  extensible.hpp  fidevice.cpp  fidevice.hpp  fwddec.hpp  joaat.hpp  natives.hpp  net_array.hpp  net_game_event.hpp  net_object_mgr.hpp  ped_factory.hpp  player.hpp  pools.hpp  ref_aware.hpp  replay.hpp  script_handler.cpp  script_handler.hpp  script_id.hpp  script_program.hpp  script_thread.hpp  sysMemAllocator.hpp  tls_context.hpp  vehicle_values.hpp
src/gui/: base_tab.cpp  base_tab.h  open_hook_tab.cpp
src/gui/components/: components.hpp  help_marker.cpp  input_text.cpp  input_text_with_hint.cpp  menu_item.cpp
src/hooking/: call_hook.cpp  detour_hook.cpp  hooking.cpp  hooking.hpp  vmt_hook.cpp  vmt_hook.hpp  vtable_hook.hpp
src/hooks/gui/: swap_chain_present.cpp  swap_chain_resizebuffers.cpp  wndproc.cpp
src/hooks/misc/: game_skeleton_update.cpp  nt_query_virtual_memory.cpp  queue_dependency.cpp
src/hooks/script/: init_native_tables.cpp  script_vm.cpp
src/logger/: exception_handler.cpp  exception_handler.hpp  stack_trace.cpp  stack_trace.hpp
src/memory/: all.hpp  batch.cpp  batch.hpp  byte_patch.hpp  fwddec.hpp  handle.hpp  module.cpp  pattern.cpp  pattern.hpp  pattern_batch.cpp  pattern_batch.hpp  range.cpp
src/native_hooks/: all_scripts.hpp  native_hooks.cpp  native_hooks.hpp
src/renderer/: renderer.hpp  renderer_dx11.cpp  renderer_dx11.hpp  renderer_dx12.cpp  renderer_dx12.hpp
src/services/script_patcher/: script_patch.cpp  script_patcher_service.cpp
src/util/: is_enhanced.hpp  is_proton.hpp  pools.hpp  scripts.hpp
src/views/: view.hpp
src/views/core/: view_main.cpp  view_menubar.cpp  view_root.cpp
src/views/debug/: open_hook_tab.cpp  view_debug_demo.cpp  view_debug_tabs.cpp  view_debug_threads.cpp
src/widgets/: imgui_bitfield.h
